--- a/WebUI/src/assets/i18n/de.json
+++ b/WebUI/src/assets/i18n/de.json
@@ -4,9 +4,9 @@
   "COM_MINI": "Minimieren",
   "COM_CLOSE": "Schließen",
   "COM_ADD": "Hinzufügen",
-  "COM_RESTORE": "Defaults wiederherstellen",
-  "COM_SD_PROMPT": "Prompt für Bildgenerierung",
-  "COM_LLM_PROMPT": "Prompt für Antwortgenerierung",
+  "COM_RESTORE": "Grundeinstellung wiederherstellen",
+  "COM_SD_PROMPT": "Eingabe für Bildgenerierung",
+  "COM_LLM_PROMPT": "Eingabe für Antwortgenerierung",
   "COM_LLM_HF_PROMPT": "<namespace>/<repo_name>",
   "COM_LLM_HF_PROMPT_GGUF": "<namespace>/<repo_name>/<file_path>",
   "COM_CLICK_UPLOAD": "- Klicken Sie zum Hochladen eines Bildes -",
@@ -50,7 +50,7 @@
   "COM_GO_TO_SETUP": "Zum Backend-Manager gehen",
   "COM_LOAD_WORKFLOW_DEFAULTS": "Workflow-Defaults laden",
   "SETTINGS_THEME": "Design",
-  "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "Der HD-Modus kann zu einer langsameren Leistung auf Systemen mit weniger als 12 GB VRAM oder 24 GB Systemarbeitsspeicher für Intel Core Ultra-PCs führen",
+  "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "Der HD-Modus kann zu einer langsameren Leistung auf Systemen mit weniger als 12 GB VRAM oder 24 GB Systemarbeitsspeicher bei Intel Core Ultra-PCs führen",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "Die Verwendung des Workflow-Modus erfordert die Installation von ComfyUI. Dies ist eine optionale Komponente, die im AI-Playground Backend-Manager installiert werden kann.",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_DOWNLOADING": "Installation im Gange...",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_COMPLETED": "Installation erfolgreich!",
