--- a/WebUI/src/assets/i18n/ja.json
+++ b/WebUI/src/assets/i18n/ja.json
@@ -58,6 +58,7 @@
   "SETTINGS_TAB_IMAGE": "画像",
   "SETTINGS_TAB_BASIC": "基本設定",
   "SETTINGS_TAB_MODEL": "モデル",
+  "SETTINGS_TAB_METRICS": "メトリクス",
   "SETTINGS_INFERENCE_DEVICE": "推論デバイス",
   "SETTINGS_LLM_BACKEND": "LLM バックエンド",
   "SETTINGS_MODEL_IMAGE_SIZE": "画像サイズ",
