--- a/WebUI/src/assets/i18n/ko.json
+++ b/WebUI/src/assets/i18n/ko.json
@@ -58,6 +58,7 @@
   "SETTINGS_TAB_IMAGE": "이미지",
   "SETTINGS_TAB_BASIC": "기본",
   "SETTINGS_TAB_MODEL": "모델",
+  "SETTINGS_TAB_METRICS": "메트릭",
   "SETTINGS_INFERENCE_DEVICE": "추론 장치",
   "SETTINGS_LLM_BACKEND": "LLM Backend",
   "SETTINGS_MODEL_IMAGE_SIZE": "이미지 크기",
