--- a/WebUI/src/assets/i18n/zh-CN.json
+++ b/WebUI/src/assets/i18n/zh-CN.json
@@ -58,6 +58,7 @@
   "SETTINGS_TAB_IMAGE": "图像生成",
   "SETTINGS_TAB_BASIC": "基本设置",
   "SETTINGS_TAB_MODEL": "模型",
+  "SETTINGS_TAB_METRICS": "指标",
   "SETTINGS_INFERENCE_DEVICE": "推理设备",
   "SETTINGS_LLM_BACKEND": "大语言模型后端",
   "SETTINGS_MODEL_IMAGE_SIZE": "图片大小",
