--- a/WebUI/src/assets/i18n/zh-TW.json
+++ b/WebUI/src/assets/i18n/zh-TW.json
@@ -58,6 +58,7 @@
   "SETTINGS_TAB_IMAGE": "圖片",
   "SETTINGS_TAB_BASIC": "基本設定",
   "SETTINGS_TAB_MODEL": "模型",
+  "SETTINGS_TAB_METRICS": "指標",
   "SETTINGS_INFERENCE_DEVICE": "推論裝置",
   "SETTINGS_LLM_BACKEND": "LLM後端",
   "SETTINGS_MODEL_IMAGE_SIZE": "圖片尺寸",
