#58 - exchanged reset token
Signed-off-by: julianbollig <julian.bollig@tngtech.com>

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -244,7 +244,7 @@
   "LOADING_VERIFYING_BACKENDS": "Verifying backends",
   "LOADING_AI_PLAYGROUND_LOADING": "AI Playground Loading",
 
-  "COM_RESET": "Reset",
+  "COM_CLEAR_HISTORY": "Clear History",
   "INPUT_PROMPT": "Prompt",
   "BACKEND": "Backend",
   "DEVICE": "Device"
