#59 - fix UI for Colorize Workflow
Signed-off-by: julianbollig <julian.bollig@tngtech.com>

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -248,5 +248,8 @@
   "COM_CLEAR_HISTORY": "Clear History",
   "INPUT_PROMPT": "Prompt",
   "BACKEND": "Backend",
-  "DEVICE": "Device"
+  "DEVICE": "Device",
+
+  "SETTINGS_IMAGE_COMFY_MODEL_INPUT_SIZE": "Model Input Size",
+  "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "Checkpoint Model"
 }
