--- a/WebUI/src/assets/i18n/id.json
+++ b/WebUI/src/assets/i18n/id.json
@@ -28,6 +28,8 @@
   "COM_DOWNLOAD_SPEED": "Kecepatan pengunduhan",
   "COM_LOADING_MODEL": "Memuat Model AI",
   "COM_LOADING_MODEL_COMPONENTS": "Memuat Komponen Model AI",
+  "COM_INSTALL_WORKFLOW_COMPONENTS": "Menginstal Komponen Alur Kerja",
+  "COM_LOADING_WORKFLOW_COMPONENTS": "Memuat Komponen Alur Kerja",
   "COM_NO_SELECTED": "Tidak Dipilih",
   "COM_CONFIRM": "Konfirmasi",
   "COM_CANCEL": "Batal",
