--- a/WebUI/src/assets/i18n/tr.json
+++ b/WebUI/src/assets/i18n/tr.json
@@ -28,6 +28,8 @@
   "COM_DOWNLOAD_SPEED": "İndirme Hızı",
   "COM_LOADING_MODEL": "AI Model Yükleniyor",
   "COM_LOADING_MODEL_COMPONENTS": "AI Model Bileşenleri Yükleniyor",
+  "COM_INSTALL_WORKFLOW_COMPONENTS": "İş Akışı Bileşenleri Yükleniyor",
+  "COM_LOADING_WORKFLOW_COMPONENTS": "İş Akışı Bileşenleri Yükleniyor",
   "COM_NO_SELECTED": "Seçim Yapılmadı",
   "COM_CONFIRM": "Onayla",
   "COM_CANCEL": "İptal",
