--- a/WebUI/src/assets/i18n/it.json
+++ b/WebUI/src/assets/i18n/it.json
@@ -244,5 +244,9 @@
   "WORKFLOW_HIGH_VRAM_INFO": "Questo modello richiede molta VRAM. Riduci la risoluzione e/o riavvia il backend ComfyUI in caso di prestazioni ridotte",
   "WORKFLOW_HIGH_VRAM_WARNING": "alta VRAM richiesta",
   "LOADING_VERIFYING_BACKENDS": "Verifica backend",
-  "LOADING_AI_PLAYGROUND_LOADING": "Caricamento AI Playground"
+  "LOADING_AI_PLAYGROUND_LOADING": "Caricamento AI Playground",
+  "COM_CLEAR_HISTORY": "Cancella cronologia",
+  "INPUT_PROMPT": "Prompt",
+  "BACKEND": "Backend",
+  "DEVICE": "Dispositivo"
 }
