--- a/WebUI/src/assets/i18n/tr.json
+++ b/WebUI/src/assets/i18n/tr.json
@@ -244,5 +244,9 @@
   "WORKFLOW_HIGH_VRAM_INFO": "Bu model çok fazla VRAM gerektiriyor. Düşük performans yaşarsanız çözünürlüğü düşürün ve/veya ComfyUI backend'ini yeniden başlatın",
   "WORKFLOW_HIGH_VRAM_WARNING": "yüksek VRAM gerekli",
   "LOADING_VERIFYING_BACKENDS": "Backend'ler doğrulanıyor",
-  "LOADING_AI_PLAYGROUND_LOADING": "AI Playground Yükleniyor"
+  "LOADING_AI_PLAYGROUND_LOADING": "AI Playground Yükleniyor",
+  "COM_CLEAR_HISTORY": "Geçmişi Temizle",
+  "INPUT_PROMPT": "Prompt",
+  "BACKEND": "Backend",
+  "DEVICE": "Cihaz"
 }
