--- a/WebUI/src/assets/i18n/es.json
+++ b/WebUI/src/assets/i18n/es.json
@@ -244,5 +244,9 @@
   "WORKFLOW_HIGH_VRAM_INFO": "Este modelo requiere mucha VRAM. Reduce la resolución y/o reinicia el backend de ComfyUI si experimentas bajo rendimiento",
   "WORKFLOW_HIGH_VRAM_WARNING": "alta VRAM requerida",
   "LOADING_VERIFYING_BACKENDS": "Verificando backends",
-  "LOADING_AI_PLAYGROUND_LOADING": "Cargando AI Playground"
+  "LOADING_AI_PLAYGROUND_LOADING": "Cargando AI Playground",
+  "COM_CLEAR_HISTORY": "Borrar historial",
+  "INPUT_PROMPT": "Prompt",
+  "BACKEND": "Backend",
+  "DEVICE": "Dispositivo"
 }
