--- a/WebUI/src/assets/i18n/ko.json
+++ b/WebUI/src/assets/i18n/ko.json
@@ -244,5 +244,9 @@
   "WORKFLOW_HIGH_VRAM_INFO": "이 모델은 많은 VRAM이 필요합니다. 성능이 저하되면 해상도를 낮추거나 ComfyUI Backend를 다시 시작하세요.",
   "WORKFLOW_HIGH_VRAM_WARNING": "많은 VRAM 필요",
   "LOADING_VERIFYING_BACKENDS": "Backend 확인 중",
-  "LOADING_AI_PLAYGROUND_LOADING": "AI Playground 로딩 중"
+  "LOADING_AI_PLAYGROUND_LOADING": "AI Playground 로딩 중",
+  "COM_CLEAR_HISTORY": "기록 지우기",
+  "INPUT_PROMPT": "프롬프트",
+  "BACKEND": "백엔드",
+  "DEVICE": "디바이스"
 }
