--- a/WebUI/src/assets/i18n/zh-TW.json
+++ b/WebUI/src/assets/i18n/zh-TW.json
@@ -244,5 +244,9 @@
   "WORKFLOW_HIGH_VRAM_INFO": "此模型需要大量顯示記憶體。如果遇到效能問題，請降低解析度或重啟ComfyUI後端",
   "WORKFLOW_HIGH_VRAM_WARNING": "需要大量顯示記憶體",
   "LOADING_VERIFYING_BACKENDS": "驗證後端",
-  "LOADING_AI_PLAYGROUND_LOADING": "AI Playground 載入中"
+  "LOADING_AI_PLAYGROUND_LOADING": "AI Playground 載入中",
+  "COM_CLEAR_HISTORY": "清除歷史",
+  "INPUT_PROMPT": "提示",
+  "BACKEND": "後端",
+  "DEVICE": "設備"
 }
