--- a/WebUI/src/assets/i18n/zh-CN.json
+++ b/WebUI/src/assets/i18n/zh-CN.json
@@ -248,5 +248,8 @@
   "COM_CLEAR_HISTORY": "清除历史",
   "INPUT_PROMPT": "提示",
   "BACKEND": "后端",
-  "DEVICE": "设备"
+  "DEVICE": "设备",
+  "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "检查点模型",
+  "SETTINGS_IMAGE_COMFY_FRAME_RATE": "帧率",
+  "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "总帧数"
 }
