--- a/WebUI/src/assets/i18n/zh-TW.json
+++ b/WebUI/src/assets/i18n/zh-TW.json
@@ -248,5 +248,9 @@
   "COM_CLEAR_HISTORY": "清除歷史",
   "INPUT_PROMPT": "提示",
   "BACKEND": "後端",
-  "DEVICE": "設備"
+  "DEVICE": "設備",
+  "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "檢查點模型",
+  "SETTINGS_IMAGE_COMFY_FRAME_RATE": "幀率",
+  "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "總幀數"
+
 }
