--- a/WebUI/src/assets/i18n/de.json
+++ b/WebUI/src/assets/i18n/de.json
@@ -248,5 +248,8 @@
   "COM_CLEAR_HISTORY": "Verlauf löschen",
   "INPUT_PROMPT": "Prompt",
   "BACKEND": "Backend",
-  "DEVICE": "Gerät"
+  "DEVICE": "Gerät",
+  "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "Checkpoint-Modell",
+  "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Bildrate",
+  "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "Gesamtanzahl Frames"
 }
