--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -192,7 +192,7 @@
   "RAG_ANALYZE_FILE_FAILED": "The file {filename} analyze failed",
   "RAG_USE_REJECT": "The interactive document list is empty, please upload the document first",
   "RAG_WHEN_CLOSE_PANEL_AT_UPLODING": "Please wait until all documents are analyzed",
-  "RAG_SOURCE": "From Source:",
+  "RAG_SOURCE": "Sources",
   "ERR_NOT_ENOUGH_DISK_SPACE": "Not enough disk space. It requires {requires_space}, but only {free_space} of free space is available",
   "ERR_DOWNLOAD_FAILED": "Download model file failed",
   "ERROR_RUNTIME_ERROR": "If a critical failure occurs, please restart the program and try again",
