--- a/WebUI/src/assets/i18n/zh-CN.json
+++ b/WebUI/src/assets/i18n/zh-CN.json
@@ -251,5 +251,15 @@
   "DEVICE": "设备",
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "检查点模型",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "帧率",
-  "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "总帧数"
+  "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "总帧数",
+  "ANSWER_MAX_TOKENS": "最大标记数",
+  "ANSWER_METRICS": "指标",
+  "ANSWER_FONT_SIZE": "字体大小",
+  "RAG_DOCUMENT_EMBEDDING_MODEL": "文档嵌入模型",
+  "RAG_DOCUMENTS": "文档",
+  "RAG_ENABLED": "已启用",
+  "RAG_ADD_DOCUMENTS": "添加文档",
+  "RAG_ADD_FILES": "添加文件",
+  "RAG_SEARCHABLE_DOCUMENTS": "可搜索文档",
+  "RAG_CLEAR_ALL": "清除全部"
 }
