--- a/WebUI/src/assets/i18n/zh-TW.json
+++ b/WebUI/src/assets/i18n/zh-TW.json
@@ -251,5 +251,15 @@
   "DEVICE": "設備",
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "檢查點模型",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "幀率",
-  "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "總幀數"
+  "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "總幀數",
+  "ANSWER_MAX_TOKENS": "最大標記數",
+  "ANSWER_METRICS": "指標",
+  "ANSWER_FONT_SIZE": "字體大小",
+  "RAG_DOCUMENT_EMBEDDING_MODEL": "文件嵌入模型",
+  "RAG_DOCUMENTS": "文件",
+  "RAG_ENABLED": "已啟用",
+  "RAG_ADD_DOCUMENTS": "新增文件",
+  "RAG_ADD_FILES": "新增檔案",
+  "RAG_SEARCHABLE_DOCUMENTS": "可搜尋的文件",
+  "RAG_CLEAR_ALL": "全部清除"
 }
