--- a/WebUI/src/assets/i18n/it.json
+++ b/WebUI/src/assets/i18n/it.json
@@ -261,5 +261,16 @@
   "RAG_ADD_DOCUMENTS": "Aggiungi Documenti",
   "RAG_ADD_FILES": "Aggiungi File",
   "RAG_SEARCHABLE_DOCUMENTS": "Documenti Ricercabili",
-  "RAG_CLEAR_ALL": "Cancella Tutto"
+  "RAG_CLEAR_ALL": "Cancella Tutto",
+
+  "BACKEND_STOP": "Arresta Backend",
+  "BACKEND_START": "Avvia Backend",
+  "BACKEND_REINSTALL": "Reinstalla Backend",
+  "BACKEND_CONFIRM": "Sei sicuro?",
+  "BACKEND_REINSTALL_DESCRIPTION": "Questo reinstallerà il backend {backend}. A seconda della tua connessione internet, potrebbe richiedere del tempo.",
+  "BACKEND_SETTINGS_TITLE": "Impostazioni {backend}",
+  "BACKEND_SETTINGS_DESCRIPTION": "Configura le impostazioni per il backend {backend}. Le modifiche potrebbero richiedere un riavvio o una reinstallazione per avere effetto.",
+  "BACKEND_VERSION": "Versione",
+  "BACKEND_VERSION_DESCRIPTION": "Il riferimento Git da utilizzare per il backend. Può essere un tag di versione o un hash di commit.",
+  "BACKEND_SAVE_CHANGES": "Salva modifiche"
 }
