--- a/WebUI/src/assets/i18n/pl.json
+++ b/WebUI/src/assets/i18n/pl.json
@@ -261,5 +261,16 @@
   "RAG_ADD_DOCUMENTS": "Dodaj dokumenty",
   "RAG_ADD_FILES": "Dodaj pliki",
   "RAG_SEARCHABLE_DOCUMENTS": "Dokumenty do przeszukania",
-  "RAG_CLEAR_ALL": "Wyczyść wszystko"
+  "RAG_CLEAR_ALL": "Wyczyść wszystko",
+
+  "BACKEND_STOP": "Zatrzymaj Backend",
+  "BACKEND_START": "Uruchom Backend",
+  "BACKEND_REINSTALL": "Przeinstaluj Backend",
+  "BACKEND_CONFIRM": "Czy jesteś pewien?",
+  "BACKEND_REINSTALL_DESCRIPTION": "Spowoduje to ponowną instalację backendu {backend}. W zależności od połączenia internetowego, może to zająć trochę czasu.",
+  "BACKEND_SETTINGS_TITLE": "Ustawienia {backend}",
+  "BACKEND_SETTINGS_DESCRIPTION": "Skonfiguruj ustawienia dla backendu {backend}. Zmiany mogą wymagać ponownego uruchomienia lub reinstalacji, aby zostały zastosowane.",
+  "BACKEND_VERSION": "Wersja",
+  "BACKEND_VERSION_DESCRIPTION": "Referencja Git do użycia dla backendu. Może to być tag wersji lub hash commitu.",
+  "BACKEND_SAVE_CHANGES": "Zapisz zmiany"
 }
