--- a/WebUI/src/assets/i18n/zh-TW.json
+++ b/WebUI/src/assets/i18n/zh-TW.json
@@ -261,5 +261,16 @@
   "RAG_ADD_DOCUMENTS": "新增文件",
   "RAG_ADD_FILES": "新增檔案",
   "RAG_SEARCHABLE_DOCUMENTS": "可搜尋的文件",
-  "RAG_CLEAR_ALL": "全部清除"
+  "RAG_CLEAR_ALL": "全部清除",
+
+  "BACKEND_STOP": "停止後端",
+  "BACKEND_START": "啟動後端",
+  "BACKEND_REINSTALL": "重新安裝後端",
+  "BACKEND_CONFIRM": "確定嗎？",
+  "BACKEND_REINSTALL_DESCRIPTION": "這將重新安裝 {backend} 後端。根據您的網路連線狀況，可能需要一些時間。",
+  "BACKEND_SETTINGS_TITLE": "{backend} 設定",
+  "BACKEND_SETTINGS_DESCRIPTION": "設定 {backend} 後端的參數。變更可能需要重新啟動或重新安裝才能生效。",
+  "BACKEND_VERSION": "版本",
+  "BACKEND_VERSION_DESCRIPTION": "用於後端的 Git 參考。這可以是版本標籤或提交雜湊。",
+  "BACKEND_SAVE_CHANGES": "儲存變更"
 }
